# safe-exam

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt
.github/workflows/: ci.yml  lint.yml
docs/experiments/cpu-profiling/: README.md
docs/experiments/gaze-calibration/: README.md
docs/experiments/person-intrusion/: README.md
docs/experiments/phone-calibration/: README.md
scripts/: detector_test.py  face_gaze_demo.py  head_pose_demo.py  mediapipe_facemesh.py  opencv.py  phone_calibration.py
scripts/experiments/: __init__.py
scripts/experiments/cpu_profile/: __main__.py  profile.py
scripts/experiments/gaze_calibration/: __init__.py  __main__.py  analyze.py  record.py
scripts/experiments/person_intrusion/: __main__.py  analyze.py  record.py
scripts/experiments/phone_calibration/: __init__.py  __main__.py  analyze.py  record.py
src/: object_detector.py  test.py
src/safe_exam/: __init__.py
src/safe_exam/capture/: __init__.py  __main__.py  capture.py  capture_config.py  capture_loop.py
src/safe_exam/detectors/: detector_test.py  head_pose_config.py  head_pose_detector.py  head_pose_overlay.py  object_detector.py  object_detector_config.py
src/safe_exam/processor/: FrameResult.py  __main__.py  attention_policy.py  debug_overlay.py  frame_processor.py  frame_result.py  intrusion_policy.py  runner.py  session_stats.py
src/safe_exam/utils/: logging_utils.py  (+1 more)
tests/: test_attention_policy.py  test_intrusion_policy.py  test_session_stats.py
utils/: paths_initializer.py
(+19 files in other folders)
