[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safe-exam"
version = "0.1.0"
description = "Modular proctoring layer for Safe Exam Browser"
readme = "README.md"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/safe_exam"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["safe_exam"]
